17 Oct 2011: Wouter
	- Fix insecure mode after dnstcp443 has been probed.

13 Oct 2011: Wouter
	- the dnssec-trigger-panel (gtk2) works on the XFCE desktop.
	- windows package works, tested Vista.
	- osx fix for insecure mode.

12 Oct 2011: Wouter
	- makes resolv.conf immutable and restores on uninstall.

10 Oct 2011: Wouter
	- detect transparent proxies and avoid them.

29 Sep 2011: Wouter
	- mac cocoa gui for hotspot signon.
	- 0.5 release.

28 Sep 2011: Wouter
	- nsis uninstall welcome image.
	- gtk menu item and dialog for hotspot signon.
	- win32 menu item and dialog for hotspot signon.
	- install unbound with dnssec-trigger on windows.  Reduced install
	  size and available for configuration by installer.exe.

27 Sep 2011: Wouter
	- for windows, get unbound-control config and path from registry.
	- new IP6 address for the service at nlnetlabs.
	- fix for windows busy loop in dnssectriggerd.
	- do not log error for RPC server not started in windows.

26 Sep 2011: Wouter
	- tentative fix for windows loop bug: if wlanapi.dll does not load.

23 Sep 2011: Wouter
	- windows README is a proper .txt files for dos.
	- 0.4 release.
	- trunk is 0.5 in development.

22 Sep 2011: Wouter
	- dnssec-trigger-control reprobe command from the commandline.
	- dnssec-trigger-control hotspot_signon, forces insecure mode for
	  a sign-on.  The reprobe command can be used to stop forced_insecure.
	- added probe tcp80 and tcp443 as last resort.
	- retry for insecure and disconnect cases with exponential backoff,
	  start 10 seconds, max 24h.
	- tcp retry after 20 seconds, in case more opens up or it was slow.

21 Sep 2011: Wouter
	- ignore UDP without QR flag: some DNS caches send echoes of the query
	  back initially.  If we ignore them we catch a (100 msec later)
	  correct answer later.  (or timeout if no answer comes).
	- if probe is in progress it prints that in status.
	- if no DNS servers via DHCP it prints that in status.
	- antialiased fonts in windows native gui.
