@@ -172,26 +172,95 @@ static void close_rescf(struct cfg* cfg, FILE* out)
 }
 #endif /* !USE_WINSOCK */
 
+#if !defined(USE_WINSOCK) && !defined(HOOKS_OSX)
+/** check argument on line matches config option */
+static int
+check_line_arg(char* line, const char* opt)
+{
+	if(!opt) /* has opt but should not */
+		return 0;
+	if(strncmp(line, opt, strlen(opt)) != 0)
+		/* has wrong content */
+		return 0;
+	if(strcmp(line+strlen(opt), "\n") != 0)
+		/* stuff after opt (too many domains) */
+		return 0;
+	return 1;
+}
+
+/** check if resolv.conf is set to 127.0.0.1 like we want */
+static int
+really_set_to_localhost(struct cfg* cfg) {
+	FILE* in = fopen(cfg->resolvconf, "r");
+	int saw_127 = 0, saw_search = 0, saw_domain = 0;
+	char line[1024];
+	if(!in) {
+		log_err("fopen %s: %s", cfg->resolvconf, strerror(errno));
+		return 0;
+	}
+	if(!fgets(line, sizeof(line), in)) {
+		fclose(in); /* failed to read first line */
+		return 0;
+	}
+	/* we want the first line to be 'Generated by me' */
+	if(strcmp(line, "# Generated by " PACKAGE_STRING "\n") != 0) {
+		fclose(in);
+		return 0;
+	}
+	/* must contain 127.0.0.1 and nothing else */
+	while(fgets(line, sizeof(line), in)) {
+		line[sizeof(line)-1] = 0; /* robust end of string */
+		if(strcmp(line, "nameserver 127.0.0.1\n") == 0) {
+			saw_127 = 1;
+		} else if(strncmp(line, "nameserver", 10) == 0) {
+			/* not 127.0.0.1 but in resolv.conf, bad! */
+			fclose(in);
+			return 0;
+		} else if(strncmp(line, "search ", 7) == 0) {
+			if(!check_line_arg(line+7, cfg->rescf_search)) {
+				fclose(in);
+				return 0;
+			}
+			saw_search = 1;
+		} else if(strncmp(line, "domain ", 7) == 0) {
+			if(!check_line_arg(line+7, cfg->rescf_domain)) {
+				fclose(in);
+				return 0;
+			}
+			saw_domain = 1;
+		}
+	}
+	fclose(in);
+	if(cfg->rescf_search && !saw_search)
+		return 0;
+	if(cfg->rescf_domain && !saw_domain)
+		return 0;
+	return saw_127;
+}
+#endif /* no USE_WINSOCK, no OSX */
+
 void hook_resolv_localhost(struct cfg* cfg)
 {
 #ifndef USE_WINSOCK
 	FILE* out;
 #endif
-	if(set_to_localhost) {
-		/* already done, do not do it again, it may
-		create a moment where the mutability fails */
-		/* TODO: check that it is localhost otherwise override rsconf*/
+	set_to_localhost = 1;
+	if(cfg->noaction) {
 		return;
 	}
-	set_to_localhost = 1;
-	if(cfg->noaction)
-		return;
 #ifdef HOOKS_OSX
 	set_dns_osx(cfg, "127.0.0.1");
 #endif
 #ifdef USE_WINSOCK
 	win_set_resolv("127.0.0.1");
 #else /* not on windows */
+#  ifndef HOOKS_OSX /* on Linux/BSD */
+	if(really_set_to_localhost(cfg)) {
+		/* already done, do not do it again, that would open
+		 * a brief moment of mutable resolv.conf */
+		return;
+	}
+#  endif
 	out = open_rescf(cfg);
 	if(!out) return;
 	/* write the nameserver records */
